<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="com.protector.driverchile.dialog.DialogAuthentication"
            />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/verification_email"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="@dimen/txt_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="@{()->view.closeDialog()}"
        android:padding="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_cancelar"
        app:tint="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:fontFamily="@font/helvetica_roman"
        android:text="@string/mesage_verification_email"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title" />


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/code"
        android:inputType="number"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/dw_edit_tex"
        android:text="@={view.code}"
        android:fontFamily="@font/helvetica"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="8"
        android:textSize="@dimen/txt_normal"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_message" />

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_varification_code"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email">

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorBlackDark"
            android:text="@string/resend_email"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_normal"
            android:fontFamily="@font/helvetica_roman"
            android:onClick="@{()->view.resendEmail()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_message" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorGreenBtn"
            android:fontFamily="@font/helvetica_roman"
            android:onClick="@{()->view.sendCode()}"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_message" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>