<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="com.protector.driverchile.dialog.DialogRecoveryPass"
            />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/recover_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txt_subtitle"
        android:fontFamily="@font/helvetica_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="@{()->view.closeDialog()}"
        android:padding="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_cancelar"
        app:tint="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/mesage_recover_password"
        android:textSize="@dimen/txt_normal"
        android:fontFamily="@font/helvetica_roman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/dw_edit_tex"
        android:paddingLeft="40dp"
        android:text="@={view.email}"
        android:singleLine="true"
        android:textSize="@dimen/txt_normal"
        android:fontFamily="@font/helvetica"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_message" />

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_mail"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />


    <Button
        android:id="@+id/btn_recovery"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorGreenBtn"
        android:fontFamily="@font/helvetica_roman"
        android:onClick="@{()->view.doRecoveryPass()}"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>